// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`change option 1`] = `
<div class="van-picker van-area">
  <div class="van-hairline--top-bottom van-picker__toolbar">
    <div class="van-picker__cancel">取消</div>
    <!---->
    <div class="van-picker__confirm">确认</div>
  </div>
  <!---->
  <div class="van-picker__columns" style="height: 220px;">
    <div class="van-picker-column" style="height: 220px;">
      <ul style="line-height: 44px;"></ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="line-height: 44px;"></ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="line-height: 44px;"></ul>
    </div>
    <div class="van-hairline--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
</div>
`;

exports[`change option 2`] = `
<div class="van-picker van-area">
  <div class="van-hairline--top-bottom van-picker__toolbar">
    <div class="van-picker__cancel">取消</div>
    <!---->
    <div class="van-picker__confirm">确认</div>
  </div>
  <!---->
  <div class="van-picker__columns" style="height: 220px;">
    <div class="van-picker-column" style="height: 220px;">
      <ul style="line-height: 44px;"></ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="line-height: 44px;"></ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="line-height: 44px;"></ul>
    </div>
    <div class="van-hairline--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
</div>
`;

exports[`change option 3`] = `
<div class="van-picker van-area">
  <div class="van-hairline--top-bottom van-picker__toolbar">
    <div class="van-picker__cancel">取消</div>
    <!---->
    <div class="van-picker__confirm">确认</div>
  </div>
  <!---->
  <div class="van-picker__columns" style="height: 220px;">
    <div class="van-picker-column" style="height: 220px;">
      <ul style="line-height: 44px;"></ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="line-height: 44px;"></ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="line-height: 44px;"></ul>
    </div>
    <div class="van-hairline--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
</div>
`;

exports[`watch code 1`] = `
<div class="van-picker van-area">
  <div class="van-hairline--top-bottom van-picker__toolbar">
    <div class="van-picker__cancel">取消</div>
    <!---->
    <div class="van-picker__confirm">确认</div>
  </div>
  <!---->
  <div class="van-picker__columns" style="height: 220px;">
    <div class="van-picker-column" style="height: 220px;">
      <ul style="line-height: 44px;"></ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="line-height: 44px;"></ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="line-height: 44px;"></ul>
    </div>
    <div class="van-hairline--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
</div>
`;

exports[`watch code 2`] = `
<div class="van-picker van-area">
  <div class="van-hairline--top-bottom van-picker__toolbar">
    <div class="van-picker__cancel">取消</div>
    <!---->
    <div class="van-picker__confirm">确认</div>
  </div>
  <!---->
  <div class="van-picker__columns" style="height: 220px;">
    <div class="van-picker-column" style="height: 220px;">
      <ul style="line-height: 44px;"></ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="line-height: 44px;"></ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="line-height: 44px;"></ul>
    </div>
    <div class="van-hairline--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
</div>
`;

exports[`watch code 3`] = `
<div class="van-picker van-area">
  <div class="van-hairline--top-bottom van-picker__toolbar">
    <div class="van-picker__cancel">取消</div>
    <!---->
    <div class="van-picker__confirm">确认</div>
  </div>
  <!---->
  <div class="van-picker__columns" style="height: 220px;">
    <div class="van-picker-column" style="height: 220px;">
      <ul style="line-height: 44px;">
        <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected">北京市</li>
        <li class="van-ellipsis van-picker-column__item">天津市</li>
      </ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="line-height: 44px;"></ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="line-height: 44px;"></ul>
    </div>
    <div class="van-hairline--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
</div>
`;

exports[`watch code 4`] = `
<div class="van-picker van-area">
  <div class="van-hairline--top-bottom van-picker__toolbar">
    <div class="van-picker__cancel">取消</div>
    <!---->
    <div class="van-picker__confirm">确认</div>
  </div>
  <!---->
  <div class="van-picker__columns" style="height: 220px;">
    <div class="van-picker-column" style="height: 220px;">
      <ul style="line-height: 44px;">
        <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected">北京市</li>
        <li class="van-ellipsis van-picker-column__item">天津市</li>
      </ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="line-height: 44px;"></ul>
    </div>
    <div class="van-picker-column" style="height: 220px;">
      <ul style="line-height: 44px;"></ul>
    </div>
    <div class="van-hairline--top-bottom van-picker__frame" style="height: 44px;"></div>
  </div>
</div>
`;
